Test authentication and overall format

--- a/HiveMind/templates/registration/login.html
+++ b/HiveMind/templates/registration/login.html
@@ -117,6 +117,7 @@
             <h1>Login to your account</h1>
             <p>Don't have an account? <a href="">Sign Up Here!</a></p>
 
+            <!-- TODO: modify styles for this implemented form -->
             <form action="" method="post">
                 {% csrf_token %}
                 {{ form }}
