--- a/HiveMind/templates/homepage.html
+++ b/HiveMind/templates/homepage.html
@@ -8,7 +8,7 @@
 <body>
     <main>
         Hello
-        <a href="/login/">Login</a>
+        <a href="/login">Login</a>
     </main>
 </body>
 </html>
