--- a/HiveMind/templates/registration/login.html
+++ b/HiveMind/templates/registration/login.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HiveMind</title>
+    <link rel="stylesheet" href="{% static 'css/login.css'}">
 
-    <style>
+    <!-- <style>
         body {
             margin: 0;
             background-color: #EDE5C3;
@@ -89,7 +90,7 @@
             padding-top: 10%;
             ;
         }
-    </style>
+    </style> -->
 
 </head>
 
