--- a/HiveMind/hiveapp/templates/base/homepage.html
+++ b/HiveMind/hiveapp/templates/base/homepage.html
@@ -1,11 +1,5 @@
-{% extends 'base.html' %}
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head> -->
+<!-- {% extends 'base.html' %}
+
 {% block content %}
 <body>
     <main>
@@ -13,5 +7,4 @@
         <a href="/login">Login</a>
     </main>
 </body>
-{% endblock %}
-</html>
+{% endblock %} -->
