Remove duplicate template files

--- a/HiveMind/templates/registration/login.html
+++ b/HiveMind/templates/registration/login.html
@@ -95,9 +95,7 @@
 
 <body>
 
-    <div class="navbar">
-        <img src="https://i.ibb.co/cL3324b/Hive-Mindd2.png" alt="HiveMind Logo">
-    </div>
+    {% extends 'navbar.html' %}
 
     <div class="center-rectangle">
 
