--- a/HiveMind/templates/base.html
+++ b/HiveMind/templates/base.html
@@ -8,6 +8,10 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
+    {% block styles %}
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    {% endblock %}
+
 </head>
 <body>
     <!-- Include Navbar -->
@@ -15,7 +19,7 @@
     {% include 'navbar.html' %}
 
     <!-- Content -->
-    <div class="container mt-4">
+    <div class="container-fluid" id="main-content">
         {% block content %}
         {% endblock %}
     </div>
