--- a/prototype/tasks/taskboard/taskboard.css
+++ b/prototype/tasks/taskboard/taskboard.css
@@ -28,9 +28,28 @@ main {
 
 .new-note {
     position: absolute;
-    top: 5px;
-    right: 5px;
+    top: 15px;
+    right: 15px;
     z-index: 1;
+    width: 100px;
+    height: auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-weight: 700;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.new-note:hover {
+    cursor: pointer;
+    box-shadow: black 3px 3px 10px,
+     white -1px -1px 5px;
+}
+
+.new-note img {
+    width: 15%;
+    height: auto;
 }
 
 .card {
