--- a/HiveMind/tasks/templates/tasks.html
+++ b/HiveMind/tasks/templates/tasks.html
@@ -3,8 +3,38 @@
 
 {% block title %}Tasks - Hive Mind {% endblock %}
 
-{% block styles %} <link rel="stylesheet" href="{% static 'css/style.css' %}"> {% endblock %}
+{% block styles %} <link rel="stylesheet" href="{% static 'css/taskboard.css' %}"> {% endblock %}
 
 {% block content %}
+    <main>
+        <div class="navbar">
+            <div class="icon" id="logo">logo</div>
+            <div></div>
+        </div>
 
+        <div class="content-wrapper">
+            <div class="new-note">
+                <img src="icons/plus.svg" alt="plus icon">
+                <p>New Note</p>
+            </div>
+            {% for note in notes %}
+                <div class="card">
+                    <div class="card-header">
+                        <p>{{ note.user }}</p>
+                        <p>{{ note.created_at}}</p>
+                    </div>
+                    <div class="card-body">
+                        <P>{{ note.content }}</P>
+                    </div>
+                    <div class="card-footer">
+                        <p>2 <a href="">replies</a></p>
+                    </div>
+                    <div class="resize-handler"></div>
+                </div>
+            {% endfor %}
+        </div>
+    </main>
+
+    <script src="scripts/drag.js"></script>
+    <script src="scripts/resize.js"></script>
 {% endblock %}
