--- a/HiveMind/tasks/templates/tasks.html
+++ b/HiveMind/tasks/templates/tasks.html
@@ -35,6 +35,6 @@
         </div>
     </main>
 
-    <script src="scripts/drag.js"></script>
-    <script src="scripts/resize.js"></script>
+    <script src="{% static 'js/drag.js' %}"></script>
+    <script src="{% static 'js/resize.js' %}"></script>
 {% endblock %}
