--- a/HiveMind/templates/base.html
+++ b/HiveMind/templates/base.html
@@ -17,8 +17,27 @@
     <!-- Include Navbar -->
     
     {% include 'navbar.html' %}
-
+    <br>
     <!-- Content -->
+    <div class="container">
+        {% if messages %}
+            {% for message in messages %}                
+                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+
+            {% endfor %}
+        {% endif %}
+
+        {% block content %}
+        {% endblock %}
+    </div> 
+
+    <br>
+
     <div class="container-fluid" id="main-content">
         {% block content %}
         {% endblock %}
