--- a/HiveMind/templates/navbar.html
+++ b/HiveMind/templates/navbar.html
@@ -22,6 +22,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'updates' %}">Updates</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">Login</a>
+                </li>
             </ul>
         </div>
     </div>
