--- a/HiveMind/tasks/static/css/taskboard.css
+++ b/HiveMind/tasks/static/css/taskboard.css
@@ -17,7 +17,7 @@ body {
 }
 
 main {
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -26,12 +26,14 @@ main {
     background-color: var(--primary-color);
     width: 100vw;
     height: 100%;
-    position: relative;
+    position: absolute;
+    top: 76px;      /* navbar height */
+    left: 0px;
 }
 
 .new-note {
-    position: absolute;
-    top: 15px;
+    position: fixed;
+    top: 91px;
     right: 15px;
     z-index: 1;
     width: 100px;
@@ -112,4 +114,30 @@ main {
     bottom: 0;
     right: 0;
     transform: translate(25%, 25%);
+}
+
+/* Reply panel */
+.reply-panel {
+    position: fixed;
+    right: -400px;
+    width: 400px;
+    z-index: 1;
+    background-color: white;
+    /* margin: 10px auto; */
+    border-radius: 5px;
+    height: 95vh;
+    top: 15px;
+
+}
+
+.reply-panel.active {
+    right: -5px;
+}
+
+@media (max-width: 900px) {
+    .reply-panel.active {
+        position: relative;
+        top: 0;
+        left: 0;
+    }
 }
