--- a/HiveMind/templates/navbar.html
+++ b/HiveMind/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="main-navbar">
     <div class="container-fluid">
         {% load static %}
         <a class="navbar-brand d-flex align-items-center" href="{% url 'home' %}">
