--- a/HiveMind/tasks/templates/tasks.html
+++ b/HiveMind/tasks/templates/tasks.html
@@ -12,10 +12,10 @@
 {% block content %}
     <main>
         <div class="content-wrapper">
-            <div class="new-note">
-                <img src="icons/plus.svg" alt="plus icon">
+            <a class="new-note" href="{% url 'create_note' %}">
+                <img src="{% static 'images/plus-solid.svg' %}" alt="plus icon">
                 <p>New Note</p>
-            </div>
+            </a>
             {% for note in notes %}
                 <div class="card" id="{{note.id}}" style="top: {{note.pos_top}}; left: {{note.pos_left}}; background-color: {{note.color}}">
                     <div class="card-header">
