--- a/HiveMind/tasks/static/css/taskboard.css
+++ b/HiveMind/tasks/static/css/taskboard.css
@@ -31,12 +31,16 @@ main {
     left: 0px;
 }
 
+.card.hidden {
+    display: none;
+}
+
 .new-note {
     position: fixed;
     top: 91px;
     right: 15px;
     z-index: 1;
-    width: 110px;
+    width: 100px;
     height: auto;
     display: flex;
     justify-content: space-around;
