--- a/HiveMind/tasks/templates/tasks.html
+++ b/HiveMind/tasks/templates/tasks.html
@@ -12,8 +12,8 @@
 {% block content %}
     <main>
         <div class="content-wrapper">
-            <div class="new-note">
-                <img src="icons/plus.svg" alt="plus icon">
+            <div class="new-note" style="gap: 5px; width: 110px;">
+                <img src="{% static 'img/plus_bold.png' %}" alt="plus icon">
                 <p>New Note</p>
             </div>
             {% for note in notes %}
