--- a/HiveMind/tasks/static/css/project.css
+++ b/HiveMind/tasks/static/css/project.css
@@ -94,6 +94,10 @@ main {
     background-color: rgba(0, 0, 0, 0.4); /* Black with transparency */
 }
 
+.responseMessage {
+    display:none;
+}
+
 /* Modal content */
 .modal-content {
     background-color: white;
