--- a/HiveMind/tasks/templates/project.html
+++ b/HiveMind/tasks/templates/project.html
@@ -15,25 +15,27 @@
     </div>
 
     <div class="projects_container">
- 
-
+        {% for project in projects %}
+            <div class="Project">
+                <img src="" alt="project snapshot">
+                <p>{{project.name}}</p>
+            </div>
+        {% endfor %}
     </div>
 
     <div id="projectModal" class="modal">
         <div class="modal-content">
             <span id="closeModalButton" class="close">&times;</span>
             <h2>Create New Project</h2>
-            <form id="projectForm">
+            <form id="projectForm" method="post">
+                {% csrf_token %} 
                 <label for="projectName">Project Name:</label>
                 <input type="text" id="projectName" name="projectName" required><br><br>
-
-                <label for="projectDescription">Description:</label><br>
-                <textarea id="projectDescription" name="projectDescription" required></textarea><br><br>
-
                 <button type="submit">Create Project</button>
             </form>
         </div>
     </div>
+
 </main>
 <script src="{% static 'js/project.js' %}"></script>
 {% endblock %}
