--- a/HiveMind/templates/navbar.html
+++ b/HiveMind/templates/navbar.html
@@ -8,24 +8,38 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse" id="navbarNav" style="justify-content: space-between;">
             <ul class="navbar-nav">
                 <!--<li class="nav-item">
                     <a class="nav-link" href="{% url 'home' %}">Home</a>
                 </li> -->
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'projects' %}">Projects</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'timeline' %}">Timeline</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'updates' %}">Updates</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'login' %}">Login</a>
-                </li>
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'projects' %}">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'timeline' %}">Timeline</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'updates' %}">Updates</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'login' %}">Login</a>
+                    </li>
+                {% endif %}
+
+                
+               
             </ul>
+            {% if user.is_authenticated %}
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="" class="nav-link">Account</a>
+                    </li>
+                </ul>
+            {% endif %}
+            
         </div>
     </div>
 </nav>
