--- a/HiveMind/hiveapp/templates/hiveapp/auth/login.html
+++ b/HiveMind/hiveapp/templates/hiveapp/auth/login.html
@@ -11,6 +11,13 @@
             height: 100vh;
         }
 
+        .content-wrapper {
+            height: 100%;
+            width: 90%;
+            display: flex;
+            justify-content: center;
+        }
+
         .navbar {
             width: 100%;
             height: 60px;
@@ -30,7 +37,7 @@
         }
 
         .center-rectangle {
-            margin-top: 5%;
+            margin-top: 8%;
             width: 70%;
             height: 75%;
             background-color: #E2D2A3;
@@ -40,7 +47,7 @@
 
         .email-login {
             background-color: white;
-            height: 100%;
+            height: auto;
             width: 60%;
             display: flex;
             flex-direction: column;
@@ -66,19 +73,14 @@
         }
 
         .continue-embeds img:nth-of-type(2),
-        .continue-embeds img:nth-of-type(3) {
+        .continue-embeds img:nth-of-type(3),
+        .continue-embeds img:nth-of-type(4) {
 
             height: 10%;
             width: 66%;
             padding-bottom: 3%;
 
 
-        }
-
-        .continue-embeds img:nth-of-type(4) {
-            height: 8%;
-            width: 65%;
-            padding-bottom: 10%;
         }
 
         .email-login h1 {
@@ -125,7 +127,7 @@
             <form action="" method=POST>
                 {% csrf_token %}
                 <h5>Email Address</h5>
-                <input type="email" id="email" name="username" placeholder="Email Address"><br><br>
+                <input type="text" id="email" name="username" placeholder="Email Address"><br><br>
 
                 <h5>Password</h5>
                 <input type="password" id="password" name="password" placeholder="Password"><br><br>
