--- a/HiveMind/templates/navbar.html
+++ b/HiveMind/templates/navbar.html
@@ -35,9 +35,9 @@
             {% if user.is_authenticated %}
                 {% if group %}
                 <div class="project-switcher" style="display: flex; justify-content: center; align-items: center; width: 50%; gap: 30px; margin-right: 17%;">
-                    <a class="nav-link" href="{% url 'taskboard' group.name %}">Taskboard</a>
+                    <a class="nav-link" id="taskboard-link" href="{% url 'taskboard' group.name %}">Taskboard</a>
                     <h1 class="navbar-brand" style="margin-right: 0;">{{group.name}}</h1>
-                    <a class="nav-link" href="{% url 'timeline' group.name %}">Timeline</a>
+                    <a class="nav-link" id="timeline-link" href="{% url 'timeline' group.name %}">Timeline</a>
                 </div>
                 {% endif %}
                 <ul class="navbar-nav">
