--- a/HiveMind/templates/navbar.html
+++ b/HiveMind/templates/navbar.html
@@ -15,10 +15,10 @@
                 </li> -->
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'projects' %}">Projects</a>
+                        <a class="nav-link" href="{% url 'project_page' user_id=request.user.id %}">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'timeline' %}">Timeline</a>
+                        <a class="nav-link" href="{% url 'timeline_page' user_id=request.user.id %}">Timeline</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'updates' %}">Updates</a>
