--- a/HiveMind/tasks/templates/project.html
+++ b/HiveMind/tasks/templates/project.html
@@ -18,7 +18,12 @@
         {% for project in projects %}
             <a class="Project" id="{{project.name}}" href="{% url 'taskboard' group_name=project.name %}">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTVYS7KEXYFAwqdRCW81e4DSR_nSLYSFStx1Q&s" alt="project snapshot">
-                <p>{{project.name}}</p>
+                <div style="display: flex; justify-content: space-between; width: 100%; align-items: center; height: 100%;">
+                    <p style="text-align: left;">{{project.name}}</p>
+                    <button class="delete-btn" id="{{project.id}}" style="margin-right: 10px;">
+                        delete
+                    </button>
+                </div>
             </a>
         {% endfor %}
     </div>
@@ -38,4 +43,36 @@
 
 </main>
 <script src="{% static 'js/project.js' %}"></script>
+<script>
+    const deleteBtn = document.querySelectorAll('.delete-btn');
+    deleteBtn.forEach(btn => {
+        btn.addEventListener('click', async(event) => {
+            console.log("click");
+            event.stopPropagation();
+            event.preventDefault();
+            // const confirmed = await confirm("Are you sure you want to delete this?");
+            const project_id = btn.id;
+            const confirmed = true;
+            console.log(project_id);
+            console.log(confirmed);
+
+            if (!confirmed) {
+                return;
+            } else {
+                const response = await fetch(`http://localhost:8000/delete-project/${project_id}/`, {
+                    method: 'POST',
+                })
+                .then(res => console.log(res))
+                .then(res => location.reload())
+
+                if (response.ok) {
+                    location.reload();
+                } else {
+                    console.error("error deleting project");
+                }
+            }
+        })
+    })
+        
+    </script>
 {% endblock %}
