Delete button updates page, removed Updates, fixed Timeline on Navbar not going to right location

--- a/HiveMind/tasks/templates/project.html
+++ b/HiveMind/tasks/templates/project.html
@@ -5,7 +5,13 @@
 
 {% block styles %}
 {{block.super}}
-    <link rel="stylesheet" href="{% static 'css/project.css' %}">
+<link rel="stylesheet" href="{% static 'css/project.css' %}">
+<style>
+    .delete-btn {
+        border-radius: 12px;
+        
+    }
+</style>
 {% endblock %}
 
 {% block content %}
@@ -16,15 +22,16 @@
 
     <div class="projects_container">
         {% for project in projects %}
-            <a class="Project" id="{{project.name}}" href="{% url 'taskboard' group_name=project.name %}">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTVYS7KEXYFAwqdRCW81e4DSR_nSLYSFStx1Q&s" alt="project snapshot">
-                <div style="display: flex; justify-content: space-between; width: 100%; align-items: center; height: 100%;">
-                    <p style="text-align: left;">{{project.name}}</p>
-                    <button class="delete-btn" id="{{project.id}}" style="margin-right: 10px;">
-                        delete
-                    </button>
-                </div>
-            </a>
+        <a class="Project" id="{{project.name}}" href="{% url 'taskboard' group_name=project.name %}">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTVYS7KEXYFAwqdRCW81e4DSR_nSLYSFStx1Q&s"
+                alt="project snapshot">
+            <div style="display: flex; justify-content: space-between; width: 100%; align-items: center; height: 100%;">
+                <p style="text-align: left;">{{project.name}}</p>
+                <button class="delete-btn" id="{{project.id}}" style="margin-right: 10px;">
+                    delete
+                </button>
+            </div>
+        </a>
         {% endfor %}
     </div>
 
@@ -33,7 +40,7 @@
             <span id="closeModalButton" class="close">&times;</span>
             <h2>Create New Project</h2>
             <form id="projectForm" method="post">
-                {% csrf_token %} 
+                {% csrf_token %}
                 <label for="projectName">Project Name:</label>
                 <input type="text" id="projectName" name="projectName" required><br><br>
                 <button type="submit">Create Project</button>
@@ -46,8 +53,8 @@
 <script>
     const deleteBtn = document.querySelectorAll('.delete-btn');
     deleteBtn.forEach(btn => {
-        btn.addEventListener('click', async(event) => {
-            console.log("click");
+        btn.addEventListener('click', async (event) => {
+            location.reload();
             event.stopPropagation();
             event.preventDefault();
             // const confirmed = await confirm("Are you sure you want to delete this?");
@@ -62,8 +69,8 @@
                 const response = await fetch(`http://localhost:8000/delete-project/${project_id}/`, {
                     method: 'POST',
                 })
-                .then(res => console.log(res))
-                .then(res => location.reload())
+                    .then(res => console.log(res))
+                    .then(res => location.reload())
 
                 if (response.ok) {
                     location.reload();
@@ -73,6 +80,6 @@
             }
         })
     })
-        
-    </script>
+
+</script>
 {% endblock %}
